--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   go_router: ^14.4.0
+  markdown_editor_plus: ^0.2.15
 
 dev_dependencies:
   flutter_test:
